...
    val academicItems by homeViewModel.academicItems.observeAsState()
    val festivalItems by homeViewModel.festivalItems.observeAsState()
    val recommendationApiUiState = homeApiViewModel.recommendationApiUiState
    var showDialog by remember { mutableStateOf(false) }
    var selectedEvent: EventCardData? by remember { mutableStateOf(null) }
    val tabItems = listOf(
        academicItems?.let { TabItem(title = "Academic", eventCards = it) },
        festivalItems?.let { TabItem(title = "Festival", eventCards = it) }
    )
    var selectedTabIndex by remember { mutableIntStateOf(0) }
    val coroutineScope = rememberCoroutineScope()
    val pagerState = rememberPagerState(pageCount = { tabItems.size })

...
                    .width(200.dp)
                    .height(50.dp)

            ) {
                Text(
                    modifier = Modifier.padding(top = 2.dp),
                    text = "행사 추천 받기",
                    fontSize = 18.sp,
                    fontFamily = poppins,
                    fontWeight = FontWeight.Medium,
                    textAlign = TextAlign.Center,
                )
            }
...
                    contentAlignment = Alignment.Center,
                    modifier = Modifier
                        .fillMaxSize()
                        .padding(16.dp)
                ) {
                    Text(
                        text = if (index == 0) "오늘은 예정된 축제가 없어요!" else "오늘은 예정된 학술제가 없어요!",
                        fontSize = 20.sp,
                        fontFamily = poppins,
                        fontWeight = FontWeight(500),
                        color = Color(0xFF000000),
                        textAlign = TextAlign.Center,
                    )
...
                    items(itemsToDisplay) { item ->
                        Box(modifier = Modifier.clickable {
                            boardViewModel.updateEventId(item.id)
                            homeNavController.navigate(HomeRoute.HomeDetail.route)
                            selectedEvent = item
                        }) {
                            EventCard(
                                organizer = item.organizer,
                                eventTitle = item.eventTitle,
                                image = item.image,
                                startDate = item.startDate,
                                endDate = item.endDate,
                                likes = item.likes,
...

                            is RecommendationApiUiState.Loading -> {
                                items(1) {
                                    CustomCircularProgressIndicator()
                                    Spacer(modifier = Modifier.height(20.dp))
                                    Text(
                                        text = "추천 행사 불러오는 중...",
                                        fontFamily = poppins,
                                        fontSize = 18.sp,
                                        fontWeight = FontWeight.SemiBold,
                                        color = HaengshaBlue
                                    )
                                }
...
                        .fillMaxSize()
                        .clickable { showDialog = false },
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Center
                ) {
                    Text(
                        text = "닫기",
                        fontSize = 16.sp,
                        fontFamily = poppins,
                        fontWeight = FontWeight.Medium,
                        textAlign = TextAlign.Center,
                        textDecoration = TextDecoration.Underline,
                    )
...
