...
                                mainNavController.navigate(MainRoute.Board.route) {
                                    if (backStackEntry.value?.destination?.route == "Dashboard") {
                                        mainNavController.popBackStack()
                                    }
                                }
                            }
                        } else if (currentScreenType == "Home") {
                            mainNavController.navigate(MainRoute.Home.route) {
                                if (backStackEntry.value?.destination?.route == "Home") {
                                    mainNavController.popBackStack()
                                }
                            }
                        } else {
...
                onClick = {
                    if (!isLogoutClicked) {
                        isLogoutClicked = true
                        loginApiViewModel.logout(userUiState.token)
                    }
                },
                text = "로그아웃 하시겠어요?"
            )
        }
        if (isLogoutClicked) {
            when (loginApiUiState) {
                is LoginApiUiState.Success -> {
                    userViewModel.resetUserData()
...
